# robot_sim_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  package.xml
include/: InvertedPendulum.h  RobotSimCppConstants.h  RobotSimCppGeneral.h
include/algorithm/: CARE_Solver.h
include/controller/: MobileRobotKinematic.h  OutputFeedbackLQR.h  StateFeedbackLQR.h
include/controller/WheeledMobileRobotController/: Jang2009.h  Kanayama1990.h  Kim2002_1.h  Kim2002_2.h
include/gazebo_sim/: InvertedPendulumLQR.h  LinkEffortPlugin.hh  WheeledMobileRobotPoseControl.h
include/model/: InvertedPendulum.h  WheeledMobileRobot.h
launch/: 01_Inverted_pendulum.launch  02_jackal.launch  02_jackal_pose_control.launch
models/Inverted_pendulum/: Inverted_pendulum.gazebo  Inverted_pendulum.xacro
robot_sim_cpp/: .gitignore  CMakeLists.txt  package.xml
robot_sim_cpp/config/: jackal_control.yaml  jackal_twist_mux.yaml
robot_sim_cpp/launch/: 01_Inverted_pendulum.launch  01_inverted_pendulum.launch.py  02_jackal_pose_control.launch.py  02_rosbot_pose_control.launch.py  03_jackal_in_office.launch  03_rosbot_in_office.launch.py
robot_sim_cpp/maps/office/: office.pgm
robot_sim_cpp/src/: 01_matrix_basic.cpp  02_CARE.cpp  03_inverted_pendulum.cpp  04_wheeled_mobile_robot.cpp  05_1D_object_tracking.cpp
src/: 01_matrix_basic.cpp  02_CARE.cpp  02_inverted_pendulum.cpp  03_inverted_pendulum.cpp  04_wheeled_mobile_robot.cpp
src/class/: InvertedPendulum.cpp
src/class/algorithm/: CARE_Solver.cpp
src/class/controller/: MobileRobotKinematic.cpp  OutputFeedbackLQR.cpp  StateFeedbackLQR.cpp
src/class/controller/WheeledMobileRobotController/: Jang2009.cpp  Kanayama1990.cpp  Kim2002_1.cpp  Kim2002_2.cpp
src/class/gazebo_sim/: InvertedPendulumLQR.cpp  WheeledMobileRobotPoseControl.cpp
src/class/model/: InvertedPendulum.cpp  WheeledMobileRobot.cpp
src/node/: InvertedPendulumLQR_Node.cpp  WheeledMobileRobotPoseControlNode.cpp
ss_algorithm/: CMakeLists.txt  package.xml
ss_algorithm/include/ss_algorithm/: AlgorithmAPI.h
ss_algorithm/include/ss_algorithm/API/: RobotSimCppGeneral.h  WheeledMobileRobotController.h
ss_algorithm/include/ss_algorithm/control/: ControlAPI.h  StateFeedbackLQR.h  WheeledMobileRobotController.h
ss_algorithm/include/ss_algorithm/control/WheeledMobileRobotController/: Jang2009.h  Kim2002_1.h  Kim2002_2.h
ss_algorithm/include/ss_algorithm/estimator/: DiscreteLinearKF.h  EstimatorAPI.h
ss_algorithm/include/ss_algorithm/solver/: CARE_Solver.h  SolverAPI.h
ss_algorithm/src/control/: StateFeedbackLQR.cpp
ss_algorithm/src/control/WheeledMobileRobotController/: Jang2009.cpp  Kim2002_1.cpp  Kim2002_2.cpp
ss_algorithm/src/estimator/: DiscreteLinearKF.cpp
ss_algorithm/src/solver/: CARE_Solver.cpp
ss_description/: CMakeLists.txt  package.xml
ss_description/Inverted_pendulum/: Inverted_pendulum.xacro
ss_description/inverted_pendulum/: inverted_pendulum.gazebo.xacro  inverted_pendulum.urdf.xacro
ss_description/urdf/: inverted_pendulum.gazebo.xacro  inverted_pendulum.urdf.xacro
ss_gazebo/: CMakeLists.txt  package.xml
ss_gazebo/include/ss_gazebo/: InvertedPendulumLQR.h  LinkEffortPlugin.hh  WheeledMobileRobotPoseControl.h
ss_gazebo/map/office/: office.yaml
ss_gazebo/src/class/: InvertedPendulumLQR.cpp  LinkEffortPlugin.cc  WheeledMobileRobotPoseControl.cpp
ss_gazebo/src/node/: InvertedPendulumLQR_Node.cpp  WheeledMobileRobotPoseControlNode.cpp
ss_gazebo/worlds/: empty.world  office.world
ss_model/: CMakeLists.txt  package.xml
ss_model/include/ss_model/inverted_pendulum/: InvertedPendulum.h
ss_model/include/ss_model/wheeled_mobile_robot/: WheeledMobileRobot.h
ss_model/src/inverted_pendulum/: InvertedPendulum.cpp
ss_model/src/wheeled_mobile_robot/: WheeledMobileRobot.cpp
ss_simulation/: CMakeLists.txt  package.xml
ss_simulation/launch/: 02_jackal_pose_control.launch  03_jackal_in_office.launch
ss_simulation/src/: 02_CARE.cpp  03_inverted_pendulum.cpp  04_wheeled_mobile_robot.cpp  05_1D_object_tracking.cpp
