<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>robot_sim_cpp</name>
    <version>1.0.0</version>
    <description>Robot simulations implemented in C++</description>
    <maintainer email="physism@gmail.com">Sangsu Lee</maintainer>
    <license>MIT</license>
    <url type="website">https://github.com/sangsulee-robot/robot_sim_cpp</url>
    <url type="bugtracker">https://github.com/sangsulee-robot/robot_sim_cpp/issues</url>
    <author email="physism@gmail.com">Sangsu Lee</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>gazebo_ros</depend>
    <depend>ss_algorithm</depend>
    <depend>ss_description</depend>
    <depend>ss_model</depend>

    <build_depend>eigen</build_depend>
    <build_depend>boost</build_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>