<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ss_algorithm</name>
    <version>1.0.0</version>
    <description>Models for robot simulations</description>
    <maintainer email="physism@gmail.com">Sangsu Lee</maintainer>
    <license>MIT</license>
    <url type="website">https://github.com/sangsulee-robot/robot_sim_cpp</url>
    <url type="bugtracker">https://github.com/sangsulee-robot/robot_sim_cpp/issues</url>
    <author email="physism@gmail.com">Sangsu Lee</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>eigen</build_depend>
    <build_depend>boost</build_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
