<?xml version="1.0"?>
<package format="2">
    <name>ss_gazebo</name>
    <version>1.0.0</version>
    <description>Gazebo nodes for robot simulations</description>
    <maintainer email="physism@gmail.com">Sang Su Lee</maintainer>
    <license>MIT</license>
    <url type="website">https://github.com/sangsulee-robot/robot_sim_cpp</url>
    <url type="bugtracker">https://github.com/sangsulee-robot/robot_sim_cpp/issues</url>
    <author email="physism@gmail.com">Sang Su Lee</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>eigen</build_depend>
    <build_depend>boost</build_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>controller_manager</build_depend>
    <build_depend>joint_state_controller</build_depend>
    <build_depend>robot_state_publisher</build_depend>
    <build_depend>ss_algorithm</build_depend>
    <build_depend>ss_model</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo_plugins</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>ss_algorithm</exec_depend>
    <exec_depend>ss_model</exec_depend>

    <export>
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
    </export>
</package>