<?xml version="1.0"?>
<package format="2">
    <name>ss_simulation</name>
    <version>1.0.0</version>
    <description>Robot simulations implemented in C++</description>
    <maintainer email="physism@gmail.com">Sang Su Lee</maintainer>
    <license>TODO</license>
    <url type="website">https://github.com/physism/robot_sim_cpp</url>
    <url type="bugtracker">https://github.com/physism/robot_sim_cpp/issues</url>
    <author email="physism@gmail.com">Sang Su Lee</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>eigen</build_depend>
    <build_depend>boost</build_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_depend>ss_algorithm</build_depend>
    <build_depend>ss_description</build_depend>
    <build_depend>ss_model</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>ss_algorithm</exec_depend>
    <exec_depend>ss_description</exec_depend>
    <exec_depend>ss_model</exec_depend>
</package>